# orestar-scraper

./: .gitignore  .rspec  Gemfile  Rakefile  config.yml  do_all_the_things.rb  package.json
js/: README.md
js/downloads/archived/: data-1348445247888.xls  data-1348446154111.xlsx
js/lib/: orestar_importer.js
js/test/: filer_test.js  orestar_importer_test.js
js/test/fixtures/: test_import.xls
js/test/support/: db.js
js/xlhtml-0.5/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  mkinstalldirs
js/xlhtml-0.5/CVS/: Entries  Repository  Root
js/xlhtml-0.5/autom4te.cache/: output.1  requests  traces.0  traces.1
js/xlhtml-0.5/cole/: AUTHORS  ChangeLog  DOWNLOAD  Makefile  Makefile.am  Makefile.in  NEWS  THANKS  TODO  cole-config.in  cole.c  cole.h.in  internal.c  oledecod.c  version.c  version.c.in
js/xlhtml-0.5/cole/CVS/: Entries  Repository
js/xlhtml-0.5/cole/doc/: HACKING  Makefile.am  Makefile.in  bugs.sgml  cole-manual.sgml  cole-manual.sgml-old  cole-sections.txt  compile.sgml  gpl.sgml  introduction.sgml  legal.sgml  using.sgml
js/xlhtml-0.5/cole/doc/CVS/: Entries  Repository
js/xlhtml-0.5/cole/doc/cole-manual/: bugs.html  cole-api.html  cole-internals.html  copyright-and-disclaimer.html  features.html  gpl-license-how-to-apply.html  gpl-license-terms.html  gpl-license.html  how-to-compile.html  index.html  introduction.html  legal-issues.html  libcole.html  requirements-to-compile.html  trademarks.html
js/xlhtml-0.5/cole/doc/cole-manual/CVS/: Entries  Repository
js/xlhtml-0.5/cole/doc/cole-manual/stylesheet-images/CVS/: Entries  Repository
js/xlhtml-0.5/cole/doc/tmpl/: api.sgml  cole-unused.sgml  internals.sgml
js/xlhtml-0.5/cole/doc/tmpl/CVS/: Entries  Repository
js/xlhtml-0.5/cole/examples/: Makefile.am  Makefile.in  README-examples  demo.c  directory.c  file.c  filesystem.c  present.sdd  sprsheet.sdc  sprsheet.xls  text.doc  text.sdw  topsrcdir.h.in  version.c
js/xlhtml-0.5/cole/examples/CVS/: Entries  Repository
js/xlhtml-0.5/cole/utils/: Makefile.am  Makefile.in  cole_extract.c  cole_isfs.c  cole_isfs_fast.c  cole_tree.c
js/xlhtml-0.5/cole/utils/CVS/: Entries  Repository
js/xlhtml-0.5/ppthtml/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  Test.ppt  nspptview  pptdump.c  ppthtml.1  ppthtml.c
js/xlhtml-0.5/ppthtml/CVS/: Entries  Repository
js/xlhtml-0.5/xlhtml/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  Test.xls  ascii.c  doxygen.conf  gpdemo  html.c  nsopen  nsxlview  support.c  xlcdump.c  xldump.c  xlhtml.1  xlhtml.c  xlhtml.h  xls-handler  xml.c  xyz
js/xlhtml-0.5/xlhtml/CVS/: Entries  Repository
js/xlhtml-0.5/xlhtml/contrib/: convertXLS.cgi  convertXLS.html  convertXLS.txt  excel2text  excel2text.txt  nsopen  nsxlview  uploader.pl  uploader.txt  xlhtml.dtd  xlhtml.dtd.txt  xlv
js/xlhtml-0.5/xlhtml/contrib/CVS/: Entries  Repository
lib/: orestar_importer.js  orestar_scraper.js  orestar_scraper.rb  scraper.rb
lib/models/: filer.js
spec/: scraper_spec.rb  spec_helper.rb
spec/fixtures/: search_index.html  search_results.html
test/: orestar_importer_test.js
