## Process this file with automake to produce Makefile.in

EXTRA_DIST = README-cole README-CVS DOWNLOAD ChangeLog ChangeLog-from1to2 TODO THANKS AUTHORS BUGS doc/* examples/* utils/* 

noinst_LIBRARIES = libcole.a 
libcole_a_SOURCES = cole.c internal.c oledecod.c olecod.c support.c version.c internal.h support.h 
AM_CFLAGS = -Wall -Wcast-align -Wpointer-arith 

